--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-light-websocket",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A simple native reconnecting websocket for Vue.js",
   "main": "dist/VueLightWebSocket.js",
   "module": "dist/VueLightWebSocket.module.js",
@@ -26,25 +26,25 @@
   "author": "Fedor Buzinov",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.1.0",
-    "@babel/core": "^7.1.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
+    "@babel/plugin-transform-modules-commonjs": "^7.15.4",
+    "@babel/preset-env": "^7.15.8",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^9.0.0",
-    "babel-preset-minify": "^0.5.0-alpha.3cc09dcf",
-    "eslint": "^5.6.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "jest": "^23.6.0",
-    "mock-socket": "^8.0.2",
-    "rollup": "^0.66.2",
-    "rollup-plugin-babel": "^4.0.1",
-    "rollup-plugin-babel-minify": "^6.0.0",
-    "vue": "^2.6.12"
+    "babel-eslint": "^10.1.0",
+    "babel-preset-minify": "^0.5.1",
+    "eslint": "^8.1.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "jest": "^27.3.1",
+    "mock-socket": "^9.0.6",
+    "rollup": "^2.58.3",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-babel-minify": "^10.0.0",
+    "vue": "^2.6.14"
   },
   "dependencies": {}
 }
